--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][main_window]
-Pos=1180,0
-Size=344,720
+Pos=1654,0
+Size=266,1080
 Collapsed=0
 DockId=0x00000002,0
 
@@ -15,7 +15,12 @@ Collapsed=0
 
 [Window][DockSpaceViewport_286331153]
 Pos=0,0
-Size=1524,720
+Size=1920,1080
+Collapsed=0
+
+[Window][CatmullRomDemo]
+Pos=1190,684
+Size=380,275
 Collapsed=0
 
 [Table][0x31804F77,2]
@@ -29,7 +34,7 @@ Column 0  Weight=1.0000
 Column 1  Width=84
 
 [Docking][Data]
-DockSpace   ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1524,720 Split=X
-  DockNode  ID=0x00000001 Parent=0x763BCB4D SizeRef=1178,1371 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0x763BCB4D SizeRef=344,1371 Selected=0x9F6D3660
+DockSpace   ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
+  DockNode  ID=0x00000001 Parent=0x763BCB4D SizeRef=1652,1371 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x763BCB4D SizeRef=266,1371 Selected=0x9F6D3660
 
