Started rendering card stats

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][main_window]
-Pos=1654,0
-Size=266,1080
+Pos=1533,0
+Size=387,1080
 Collapsed=0
 DockId=0x00000002,0
 
@@ -19,8 +19,13 @@ Size=1920,1080
 Collapsed=0
 
 [Window][CatmullRomDemo]
-Pos=1190,684
-Size=380,275
+Pos=1408,139
+Size=380,279
+Collapsed=0
+
+[Window][gg]
+Pos=1251,576
+Size=220,301
 Collapsed=0
 
 [Table][0x31804F77,2]
@@ -35,6 +40,6 @@ Column 1  Width=84
 
 [Docking][Data]
 DockSpace   ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode  ID=0x00000001 Parent=0x763BCB4D SizeRef=1652,1371 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0x763BCB4D SizeRef=266,1371 Selected=0x9F6D3660
+  DockNode  ID=0x00000001 Parent=0x763BCB4D SizeRef=1531,1371 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x763BCB4D SizeRef=387,1371 Selected=0x9F6D3660
 
