added SpringX refactoring

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][main_window]
-Pos=1498,0
-Size=422,1080
+Pos=1454,0
+Size=466,518
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][DockSpaceViewport_11111111]
 Size=1280,720
@@ -24,9 +24,10 @@ Size=380,279
 Collapsed=0
 
 [Window][gg]
-Pos=1251,576
-Size=220,301
+Pos=1454,520
+Size=466,560
 Collapsed=0
+DockId=0x00000004,0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -39,7 +40,9 @@ Column 0  Weight=1.0000
 Column 1  Width=84
 
 [Docking][Data]
-DockSpace   ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode  ID=0x00000001 Parent=0x763BCB4D SizeRef=1496,1371 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0x763BCB4D SizeRef=422,1371 Selected=0x9F6D3660
+DockSpace     ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
+  DockNode    ID=0x00000001 Parent=0x763BCB4D SizeRef=2022,1371 CentralNode=1
+  DockNode    ID=0x00000002 Parent=0x763BCB4D SizeRef=466,1371 Split=Y Selected=0x9F6D3660
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=466,518 Selected=0x9F6D3660
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=466,560 Selected=0x27A3ED58
 
