--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][main_window]
-Pos=1600,0
-Size=320,1080
+Pos=1633,0
+Size=287,1080
 Collapsed=0
 DockId=0x00000003,0
 
@@ -34,10 +34,15 @@ Size=1350,212
 Collapsed=0
 
 [Window][GameBoard]
-Pos=1606,488
-Size=314,592
+Pos=1633,488
+Size=287,592
 Collapsed=0
 DockId=0x00000004,0
+
+[Window][Card Demo]
+Pos=1238,569
+Size=370,471
+Collapsed=0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -51,8 +56,8 @@ Column 1  Width=84
 
 [Docking][Data]
 DockSpace     ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode    ID=0x00000001 Parent=0x763BCB4D SizeRef=1598,1371 CentralNode=1 Selected=0xE335455C
-  DockNode    ID=0x00000002 Parent=0x763BCB4D SizeRef=320,1371 Split=Y Selected=0x9F6D3660
+  DockNode    ID=0x00000001 Parent=0x763BCB4D SizeRef=2201,1371 CentralNode=1 Selected=0xE335455C
+  DockNode    ID=0x00000002 Parent=0x763BCB4D SizeRef=287,1371 Split=Y Selected=0x9F6D3660
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Selected=0x9F6D3660
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
 
