--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][main_window]
-Pos=1633,0
-Size=287,1080
+Pos=1610,0
+Size=310,1080
 Collapsed=0
 DockId=0x00000003,0
 
@@ -44,6 +44,11 @@ Pos=1237,890
 Size=370,150
 Collapsed=0
 
+[Window][CardTank Demo]
+Pos=1227,677
+Size=346,211
+Collapsed=0
+
 [Table][0x31804F77,2]
 RefScale=13
 Column 0  Weight=1.0000
@@ -56,8 +61,8 @@ Column 1  Width=84
 
 [Docking][Data]
 DockSpace     ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode    ID=0x00000001 Parent=0x763BCB4D SizeRef=2201,1371 CentralNode=1 Selected=0xE335455C
-  DockNode    ID=0x00000002 Parent=0x763BCB4D SizeRef=287,1371 Split=Y Selected=0x9F6D3660
+  DockNode    ID=0x00000001 Parent=0x763BCB4D SizeRef=1608,1371 CentralNode=1 Selected=0xE335455C
+  DockNode    ID=0x00000002 Parent=0x763BCB4D SizeRef=310,1371 Split=Y Selected=0x9F6D3660
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Selected=0x9F6D3660
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
 
