--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][main_window]
-Pos=1570,0
-Size=350,1080
+Pos=2064,0
+Size=426,626
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][DockSpaceViewport_11111111]
 Size=1280,720
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_286331153]
 Pos=0,0
-Size=1920,1080
+Size=2490,1371
 Collapsed=0
 
 [Window][CatmullRomDemo]
@@ -45,9 +45,10 @@ Size=370,150
 Collapsed=0
 
 [Window][CardTank Demo]
-Pos=1076,933
-Size=346,211
+Pos=2064,628
+Size=426,743
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Dear ImGui Demo]
 Pos=677,52
@@ -67,7 +68,7 @@ Column 1  Width=84
 [Table][0x9D382078,2]
 RefScale=13
 Column 0  Weight=1.0000
-Column 1  Width=60
+Column 1  Width=61
 
 [Table][0x8DFA6E86,2]
 Column 0  Weight=1.0000
@@ -84,9 +85,11 @@ Column 1  Width=84
 Column 2  Width=126
 
 [Docking][Data]
-DockSpace     ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode    ID=0x00000001 Parent=0x763BCB4D SizeRef=1568,1371 CentralNode=1 Selected=0xE335455C
-  DockNode    ID=0x00000002 Parent=0x763BCB4D SizeRef=350,1371 Split=Y Selected=0x9F6D3660
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Selected=0x9F6D3660
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
+DockSpace       ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=2490,1371 Split=X
+  DockNode      ID=0x00000001 Parent=0x763BCB4D SizeRef=2062,1371 CentralNode=1 Selected=0xE335455C
+  DockNode      ID=0x00000002 Parent=0x763BCB4D SizeRef=426,1371 Split=Y Selected=0x9F6D3660
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=453,493 Selected=0x9F6D3660
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=453,585 Selected=0xCBF28E47
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
 
