more work on GameBoard2.

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][main_window]
-Pos=1555,0
-Size=365,493
+Pos=1582,0
+Size=338,496
 Collapsed=0
 DockId=0x00000005,0
 
@@ -45,15 +45,21 @@ Size=370,150
 Collapsed=0
 
 [Window][CardTank Demo]
-Pos=1555,495
-Size=365,585
+Pos=1582,498
+Size=338,208
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
 Pos=677,52
 Size=673,848
 Collapsed=1
+
+[Window][tank]
+Pos=1582,708
+Size=338,372
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -85,11 +91,13 @@ Column 1  Width=84
 Column 2  Width=126
 
 [Docking][Data]
-DockSpace       ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode      ID=0x00000001 Parent=0x763BCB4D SizeRef=1553,1371 CentralNode=1 Selected=0xE335455C
-  DockNode      ID=0x00000002 Parent=0x763BCB4D SizeRef=365,1371 Split=Y Selected=0x9F6D3660
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=453,493 Selected=0x9F6D3660
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=453,585 Selected=0xCBF28E47
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
+DockSpace         ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
+  DockNode        ID=0x00000001 Parent=0x763BCB4D SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
+  DockNode        ID=0x00000002 Parent=0x763BCB4D SizeRef=338,1371 Split=Y Selected=0x9F6D3660
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
 
