Setup Scenes (for debugging purposes, for now at least).

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=984,485
+Size=631,264
 Collapsed=0
 
 [Window][main_window]
@@ -51,15 +51,49 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
-Pos=677,52
+Pos=439,59
 Size=673,848
-Collapsed=1
+Collapsed=0
 
 [Window][tank]
 Pos=1582,708
 Size=338,372
 Collapsed=0
 DockId=0x00000008,0
+
+[Window][Stage]
+Pos=1576,0
+Size=344,187
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Graphics]
+Pos=1576,189
+Size=344,390
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][Game]
+Pos=1442,450
+Size=478,364
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][GameBoard2 Test]
+Pos=557,114
+Size=166,192
+Collapsed=0
+
+[Window][Scene - GameBoard2 Test]
+Pos=864,358
+Size=401,290
+Collapsed=0
+
+[Window][Scene]
+Pos=1576,581
+Size=344,499
+Collapsed=0
+DockId=0x00000010,0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -90,14 +124,27 @@ Column 0  Weight=1.0000
 Column 1  Width=84
 Column 2  Width=126
 
+[Table][0x5F7F0FEC,2]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=126
+
 [Docking][Data]
-DockSpace         ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode        ID=0x00000001 Parent=0x763BCB4D SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
-  DockNode        ID=0x00000002 Parent=0x763BCB4D SizeRef=338,1371 Split=Y Selected=0x9F6D3660
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
+DockSpace           ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
+  DockNode          ID=0x0000000E Parent=0x763BCB4D SizeRef=1574,1080 Split=X
+    DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
+    DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
+      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
+        DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
+        DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
+          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
+          DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
+      DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
+  DockNode          ID=0x00000009 Parent=0x763BCB4D SizeRef=344,1080 Split=Y Selected=0x44ACAEBD
+    DockNode        ID=0x0000000B Parent=0x00000009 SizeRef=478,187 Split=Y Selected=0x44ACAEBD
+      DockNode      ID=0x0000000C Parent=0x0000000B SizeRef=478,448 Selected=0x44ACAEBD
+      DockNode      ID=0x0000000D Parent=0x0000000B SizeRef=478,364 Selected=0x26816F31
+    DockNode        ID=0x0000000A Parent=0x00000009 SizeRef=478,891 Split=Y Selected=0xD256522E
+      DockNode      ID=0x0000000F Parent=0x0000000A SizeRef=390,390 Selected=0xD256522E
+      DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=390,499 Selected=0xE192E354
 
