--- a/imgui.ini
+++ b/imgui.ini
@@ -62,22 +62,22 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stage]
-Pos=1578,0
-Size=342,187
+Pos=1558,0
+Size=362,143
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000B,0
 
 [Window][Graphics]
-Pos=1578,189
-Size=342,390
+Pos=1558,145
+Size=362,575
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x0000000C,0
 
 [Window][Game]
 Pos=1442,450
 Size=478,364
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000009,0
 
 [Window][GameBoard2 Test]
 Pos=557,114
@@ -90,10 +90,10 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=1578,581
-Size=342,499
+Pos=1558,722
+Size=362,358
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x0000000F,0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -130,21 +130,21 @@ Column 0  Weight=1.7321
 Column 1  Width=17
 
 [Docking][Data]
-DockSpace           ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode          ID=0x0000000E Parent=0x763BCB4D SizeRef=1576,1080 Split=X
-    DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
-    DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
-      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
-        DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
-        DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
-          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
-          DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
-      DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
-  DockNode          ID=0x00000009 Parent=0x763BCB4D SizeRef=342,1080 Split=Y Selected=0x44ACAEBD
-    DockNode        ID=0x0000000B Parent=0x00000009 SizeRef=478,187 Split=Y Selected=0x44ACAEBD
-      DockNode      ID=0x0000000C Parent=0x0000000B SizeRef=478,448 Selected=0x44ACAEBD
-      DockNode      ID=0x0000000D Parent=0x0000000B SizeRef=478,364 Selected=0x26816F31
-    DockNode        ID=0x0000000A Parent=0x00000009 SizeRef=478,891 Split=Y Selected=0xD256522E
-      DockNode      ID=0x0000000F Parent=0x0000000A SizeRef=390,390 Selected=0xD256522E
-      DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=390,499 Selected=0xE192E354
+DockSpace             ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
+  DockNode            ID=0x00000010 Parent=0x763BCB4D SizeRef=1556,1080 Split=X
+    DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
+      DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
+      DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
+        DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
+          DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
+          DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
+            DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
+            DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
+        DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
+    DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
+  DockNode            ID=0x0000000A Parent=0x763BCB4D SizeRef=362,1080 Split=Y
+    DockNode          ID=0x0000000B Parent=0x0000000A SizeRef=445,125 Selected=0x44ACAEBD
+    DockNode          ID=0x0000000D Parent=0x0000000A SizeRef=445,819 Split=Y Selected=0xD256522E
+      DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=445,629 Selected=0xD256522E
+      DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=445,391 Selected=0xE192E354
 
