--- a/imgui.ini
+++ b/imgui.ini
@@ -51,7 +51,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
-Pos=439,59
+Pos=426,88
 Size=673,848
 Collapsed=0
 
@@ -62,16 +62,16 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stage]
-Pos=1558,0
-Size=362,143
-Collapsed=0
-DockId=0x0000000B,0
-
-[Window][Graphics]
-Pos=1558,145
-Size=362,575
+Pos=1411,0
+Size=509,185
 Collapsed=0
 DockId=0x0000000C,0
+
+[Window][Graphics]
+Pos=1411,187
+Size=509,461
+Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Game]
 Pos=1442,450
@@ -90,10 +90,20 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=1558,722
-Size=362,358
+Pos=1411,650
+Size=509,430
 Collapsed=0
 DockId=0x0000000F,0
+
+[Window][Delete?]
+Pos=804,481
+Size=311,118
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=755,454
+Size=409,172
+Collapsed=0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -129,9 +139,34 @@ RefScale=13
 Column 0  Weight=1.7321
 Column 1  Width=17
 
+[Table][0xAA065004,2]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=302
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
 [Docking][Data]
 DockSpace             ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode            ID=0x00000010 Parent=0x763BCB4D SizeRef=1556,1080 Split=X
+  DockNode            ID=0x00000010 Parent=0x763BCB4D SizeRef=1409,1371 Split=X
     DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
       DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
       DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
@@ -142,9 +177,9 @@ DockSpace             ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Spl
             DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
         DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
     DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
-  DockNode            ID=0x0000000A Parent=0x763BCB4D SizeRef=362,1080 Split=Y
-    DockNode          ID=0x0000000B Parent=0x0000000A SizeRef=445,125 Selected=0x44ACAEBD
-    DockNode          ID=0x0000000D Parent=0x0000000A SizeRef=445,819 Split=Y Selected=0xD256522E
-      DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=445,629 Selected=0xD256522E
-      DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=445,391 Selected=0xE192E354
+  DockNode            ID=0x0000000B Parent=0x763BCB4D SizeRef=509,1371 Split=Y
+    DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
+    DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
+      DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,461 Selected=0xD256522E
+      DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,430 Selected=0xE192E354
 
