--- a/imgui.ini
+++ b/imgui.ini
@@ -62,14 +62,14 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stage]
-Pos=1485,0
-Size=435,185
+Pos=1515,0
+Size=405,185
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Graphics]
-Pos=1485,187
-Size=435,461
+Pos=1515,187
+Size=405,330
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -90,10 +90,10 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=1485,650
-Size=435,430
+Pos=1515,519
+Size=405,221
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000015,0
 
 [Window][Delete?]
 Pos=804,481
@@ -104,6 +104,50 @@ Collapsed=0
 Pos=755,454
 Size=409,172
 Collapsed=0
+
+[Window][selected_box]
+Pos=1396,519
+Size=524,344
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][Box Hierarchy]
+Pos=666,322
+Size=241,196
+Collapsed=0
+
+[Window][Box##selected_box]
+Pos=992,462
+Size=311,293
+Collapsed=0
+
+[Window][Box Hierarchy##box_hierarchy]
+Pos=1396,708
+Size=524,372
+Collapsed=0
+DockId=0x00000014,0
+
+[Window]["a"##selected_box]
+Pos=677,423
+Size=247,271
+Collapsed=0
+
+[Window]["摡"##selected_box]
+Pos=60,60
+Size=247,271
+Collapsed=0
+
+[Window][###box_hierarchy]
+Pos=1515,742
+Size=405,338
+Collapsed=0
+DockId=0x00000016,0
+
+[Window][###selected_box]
+Pos=0,0
+Size=284,1080
+Collapsed=0
+DockId=0x00000017,0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -142,7 +186,7 @@ Column 1  Width=17
 [Table][0xAA065004,2]
 RefScale=13
 Column 0  Weight=1.0000
-Column 1  Width=234
+Column 1  Width=202
 
 [Table][0x82CBB907,3]
 Column 0  Weight=1.0000
@@ -164,22 +208,69 @@ Column 3  Width=68
 Column 4  Weight=1.0000
 Column 5  Width=-1
 
+[Table][0x484ABA1D,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x495C4876,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xEB73ABE8,2]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=4
+
+[Table][0x7E5D679D,2]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=4
+
+[Table][0xE4C727AC,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x646393D4,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xCBA88C69,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xD3CB32B0,2]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=191
+
+[Table][0x1D185AA2,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace             ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode            ID=0x00000010 Parent=0x763BCB4D SizeRef=1483,1371 Split=X
-    DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
-      DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
-      DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
-        DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
-          DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
-          DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
-            DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
-            DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
-        DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
-    DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
-  DockNode            ID=0x0000000B Parent=0x763BCB4D SizeRef=435,1371 Split=Y
-    DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
-    DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
-      DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,461 Selected=0xD256522E
-      DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,430 Selected=0xE192E354
+DockSpace               ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
+  DockNode              ID=0x00000017 Parent=0x763BCB4D SizeRef=284,1080 Selected=0x881B4C42
+  DockNode              ID=0x00000018 Parent=0x763BCB4D SizeRef=1634,1080 Split=X
+    DockNode            ID=0x00000010 Parent=0x00000018 SizeRef=1227,1371 Split=X
+      DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
+        DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
+        DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
+          DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
+            DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
+            DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
+              DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
+              DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
+          DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
+      DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
+    DockNode            ID=0x0000000B Parent=0x00000018 SizeRef=405,1371 Split=Y
+      DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
+      DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
+        DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,330 Selected=0xD256522E
+        DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,561 Split=Y Selected=0xE192E354
+          DockNode      ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
+          DockNode      ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Split=Y Selected=0xE192E354
+            DockNode    ID=0x00000013 Parent=0x00000012 SizeRef=524,187 Split=Y Selected=0xE192E354
+              DockNode  ID=0x00000015 Parent=0x00000013 SizeRef=524,221 Selected=0xE192E354
+              DockNode  ID=0x00000016 Parent=0x00000013 SizeRef=524,338 Selected=0xB54AE55D
+            DockNode    ID=0x00000014 Parent=0x00000012 SizeRef=524,372 Selected=0x44978E37
 
