--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ option(YAML_BUILD_SHARED_LIBS   OFF)
 FetchContent_Declare(
     yaml-cpp
     GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
-    GIT_TAG yaml-cpp-0.7.0)
+    GIT_TAG 0.8.0)
 FetchContent_MakeAvailable(yaml-cpp)
 target_link_libraries(${GAME_EXECUTABLE} PRIVATE yaml-cpp)
 
