--- a/imgui.ini
+++ b/imgui.ini
@@ -62,14 +62,14 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stage]
-Pos=1590,0
-Size=330,185
+Pos=1521,0
+Size=399,185
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Graphics]
-Pos=1590,187
-Size=330,492
+Pos=1521,187
+Size=399,397
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -90,8 +90,8 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=1590,681
-Size=330,157
+Pos=1521,586
+Size=399,166
 Collapsed=0
 DockId=0x00000015,0
 
@@ -138,14 +138,19 @@ Size=247,271
 Collapsed=0
 
 [Window][###box_hierarchy]
-Pos=1590,840
-Size=330,240
+Pos=1521,754
+Size=399,326
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][###selected_box]
-Pos=1047,533
-Size=433,530
+Pos=947,233
+Size=522,788
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=339,902
 Collapsed=0
 
 [Table][0x31804F77,2]
@@ -240,7 +245,7 @@ Column 1  Weight=1.0000
 [Table][0xD3CB32B0,2]
 RefScale=13
 Column 0  Weight=1.0000
-Column 1  Width=143
+Column 1  Width=158
 
 [Table][0x1D185AA2,2]
 Column 0  Weight=0.7711
@@ -248,7 +253,7 @@ Column 1  Weight=1.2289
 
 [Docking][Data]
 DockSpace             ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode            ID=0x00000010 Parent=0x763BCB4D SizeRef=1197,1371 Split=X
+  DockNode            ID=0x00000010 Parent=0x763BCB4D SizeRef=1519,1371 Split=X
     DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
       DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
       DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
@@ -259,15 +264,15 @@ DockSpace             ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Spl
             DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
         DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
     DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
-  DockNode            ID=0x0000000B Parent=0x763BCB4D SizeRef=330,1371 Split=Y
+  DockNode            ID=0x0000000B Parent=0x763BCB4D SizeRef=399,1371 Split=Y
     DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
     DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
-      DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,492 Selected=0xD256522E
-      DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,399 Split=Y Selected=0xE192E354
+      DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,397 Selected=0xD256522E
+      DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,494 Split=Y Selected=0xE192E354
         DockNode      ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
         DockNode      ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Split=Y Selected=0xE192E354
           DockNode    ID=0x00000013 Parent=0x00000012 SizeRef=524,187 Split=Y Selected=0xE192E354
-            DockNode  ID=0x00000015 Parent=0x00000013 SizeRef=524,221 Selected=0xE192E354
-            DockNode  ID=0x00000016 Parent=0x00000013 SizeRef=524,338 Selected=0xB54AE55D
+            DockNode  ID=0x00000015 Parent=0x00000013 SizeRef=524,166 Selected=0xE192E354
+            DockNode  ID=0x00000016 Parent=0x00000013 SizeRef=524,326 Selected=0xB54AE55D
           DockNode    ID=0x00000014 Parent=0x00000012 SizeRef=524,372 Selected=0x44978E37
 
