--- a/imgui.ini
+++ b/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_286331153]
 Pos=0,0
-Size=1920,1080
+Size=2490,1371
 Collapsed=0
 
 [Window][CatmullRomDemo]
@@ -62,16 +62,16 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stage]
-Pos=1598,0
-Size=322,185
+Pos=1978,0
+Size=512,235
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Graphics]
-Pos=1598,187
-Size=322,397
+Pos=1978,237
+Size=512,568
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000013,0
 
 [Window][Game]
 Pos=1442,450
@@ -90,10 +90,10 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=1598,586
-Size=322,166
+Pos=1978,807
+Size=512,564
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x00000014,0
 
 [Window][Delete?]
 Pos=804,481
@@ -125,7 +125,7 @@ Collapsed=0
 Pos=1396,708
 Size=524,372
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x00000012,0
 
 [Window]["a"##selected_box]
 Pos=677,423
@@ -138,20 +138,27 @@ Size=247,271
 Collapsed=0
 
 [Window][###box_hierarchy]
-Pos=1598,754
-Size=322,326
+Pos=0,674
+Size=500,343
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][###selected_box]
-Pos=1121,479
-Size=415,578
+Pos=0,0
+Size=500,672
 Collapsed=0
+DockId=0x00000015,0
 
 [Window][Dear ImGui Style Editor]
 Pos=255,44
-Size=339,902
+Size=377,902
 Collapsed=0
+
+[Window][###box_files]
+Pos=0,1019
+Size=500,352
+Collapsed=0
+DockId=0x0000001A,0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -242,37 +249,47 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x1D185AA2,2]
+Column 0  Weight=1.5027
+Column 1  Weight=0.4973
+
+[Table][0xDBC4C3E1,3]
+RefScale=13
+Column 0  Width=15
+Column 1  Weight=1.1470
+Column 2  Weight=0.8061
+
 [Table][0xD3CB32B0,2]
 RefScale=13
-Column 0  Weight=1.0000
-Column 1  Width=119
-
-[Table][0x1D185AA2,2]
-Column 0  Weight=0.7711
-Column 1  Weight=1.2289
+Column 0  Weight=0.3780
+Column 1  Width=107
 
 [Docking][Data]
-DockSpace             ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode            ID=0x00000010 Parent=0x763BCB4D SizeRef=1532,1371 Split=X
-    DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
-      DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
-      DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
-        DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
-          DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
-          DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
-            DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
-            DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
-        DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
-    DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
-  DockNode            ID=0x0000000B Parent=0x763BCB4D SizeRef=322,1371 Split=Y
-    DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
-    DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
-      DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,397 Selected=0xD256522E
-      DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,494 Split=Y Selected=0xE192E354
-        DockNode      ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
-        DockNode      ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Split=Y Selected=0xE192E354
-          DockNode    ID=0x00000013 Parent=0x00000012 SizeRef=524,187 Split=Y Selected=0xE192E354
-            DockNode  ID=0x00000015 Parent=0x00000013 SizeRef=524,166 Selected=0xE192E354
-            DockNode  ID=0x00000016 Parent=0x00000013 SizeRef=524,326 Selected=0xB54AE55D
-          DockNode    ID=0x00000014 Parent=0x00000012 SizeRef=524,372 Selected=0x44978E37
+DockSpace               ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=2490,1371 Split=X
+  DockNode              ID=0x00000017 Parent=0x763BCB4D SizeRef=500,1080 Split=Y Selected=0x881B4C42
+    DockNode            ID=0x00000019 Parent=0x00000017 SizeRef=356,801 Split=Y Selected=0x881B4C42
+      DockNode          ID=0x00000015 Parent=0x00000019 SizeRef=385,529 Selected=0x881B4C42
+      DockNode          ID=0x00000016 Parent=0x00000019 SizeRef=385,270 Selected=0xB54AE55D
+    DockNode            ID=0x0000001A Parent=0x00000017 SizeRef=356,277 Selected=0x2064C6BC
+  DockNode              ID=0x00000018 Parent=0x763BCB4D SizeRef=1418,1080 Split=X
+    DockNode            ID=0x00000010 Parent=0x00000018 SizeRef=1474,1371 Split=X
+      DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
+        DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
+        DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
+          DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
+            DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
+            DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
+              DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
+              DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
+          DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
+      DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
+    DockNode            ID=0x0000000B Parent=0x00000018 SizeRef=512,1371 Split=Y
+      DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
+      DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
+        DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,369 Split=Y Selected=0xD256522E
+          DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=268,447 Selected=0xD256522E
+          DockNode      ID=0x00000014 Parent=0x0000000A SizeRef=268,444 Selected=0xE192E354
+        DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,522 Split=Y Selected=0xE192E354
+          DockNode      ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
+          DockNode      ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Selected=0xE192E354
 
