--- a/imgui.ini
+++ b/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_286331153]
 Pos=0,0
-Size=2490,1371
+Size=1920,1080
 Collapsed=0
 
 [Window][CatmullRomDemo]
@@ -51,7 +51,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
-Pos=654,119
+Pos=651,120
 Size=673,848
 Collapsed=0
 
@@ -62,14 +62,14 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stage]
-Pos=1978,0
-Size=512,235
+Pos=1636,0
+Size=284,185
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Graphics]
-Pos=1978,237
-Size=512,568
+Pos=1636,187
+Size=284,393
 Collapsed=0
 DockId=0x00000013,0
 
@@ -90,8 +90,8 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=1978,807
-Size=512,564
+Pos=1636,582
+Size=284,498
 Collapsed=0
 DockId=0x00000014,0
 
@@ -138,14 +138,13 @@ Size=247,271
 Collapsed=0
 
 [Window][###box_hierarchy]
-Pos=0,674
-Size=500,343
+Pos=0,639
+Size=840,305
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][###selected_box]
-Pos=0,0
-Size=500,672
+Size=840,637
 Collapsed=0
 DockId=0x00000015,0
 
@@ -155,10 +154,32 @@ Size=377,902
 Collapsed=0
 
 [Window][###box_files]
-Pos=0,1019
-Size=500,352
+Pos=0,946
+Size=840,152
 Collapsed=0
-DockId=0x0000001A,0
+DockId=0x0000001E,0
+
+[Window][Example: Documents]
+Pos=212,90
+Size=620,944
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=82,76
+Size=520,600
+Collapsed=0
+
+[Window][###yaml_hierarchy]
+Pos=370,1100
+Size=470,271
+Collapsed=0
+DockId=0x0000001D,0
+
+[Window][###cpp_hierarchy]
+Pos=0,1100
+Size=368,271
+Collapsed=0
+DockId=0x0000001C,0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -265,14 +286,18 @@ Column 0  Weight=0.3780
 Column 1  Width=107
 
 [Docking][Data]
-DockSpace               ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=2490,1371 Split=X
-  DockNode              ID=0x00000017 Parent=0x763BCB4D SizeRef=500,1080 Split=Y Selected=0x881B4C42
-    DockNode            ID=0x00000019 Parent=0x00000017 SizeRef=356,801 Split=Y Selected=0x881B4C42
-      DockNode          ID=0x00000015 Parent=0x00000019 SizeRef=385,529 Selected=0x881B4C42
-      DockNode          ID=0x00000016 Parent=0x00000019 SizeRef=385,270 Selected=0xB54AE55D
-    DockNode            ID=0x0000001A Parent=0x00000017 SizeRef=356,277 Selected=0x2064C6BC
-  DockNode              ID=0x00000018 Parent=0x763BCB4D SizeRef=1418,1080 Split=X
-    DockNode            ID=0x00000010 Parent=0x00000018 SizeRef=1474,1371 Split=X
+DockSpace               ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
+  DockNode              ID=0x00000017 Parent=0x763BCB4D SizeRef=840,1080 Split=Y Selected=0x881B4C42
+    DockNode            ID=0x00000019 Parent=0x00000017 SizeRef=356,743 Split=Y Selected=0x881B4C42
+      DockNode          ID=0x00000015 Parent=0x00000019 SizeRef=385,637 Selected=0x881B4C42
+      DockNode          ID=0x00000016 Parent=0x00000019 SizeRef=385,305 Selected=0xB54AE55D
+    DockNode            ID=0x0000001A Parent=0x00000017 SizeRef=356,335 Split=Y Selected=0x2064C6BC
+      DockNode          ID=0x0000001E Parent=0x0000001A SizeRef=500,120 Selected=0x2064C6BC
+      DockNode          ID=0x0000001B Parent=0x0000001A SizeRef=500,213 Split=X
+        DockNode        ID=0x0000001C Parent=0x0000001B SizeRef=368,456 Selected=0x95A8BB3D
+        DockNode        ID=0x0000001D Parent=0x0000001B SizeRef=470,456 Selected=0x8BC2715C
+  DockNode              ID=0x00000018 Parent=0x763BCB4D SizeRef=1648,1080 Split=X
+    DockNode            ID=0x00000010 Parent=0x00000018 SizeRef=1634,1371 Split=X
       DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
         DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
         DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
@@ -283,12 +308,12 @@ DockSpace               ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=2490,1371 S
               DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
           DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
       DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
-    DockNode            ID=0x0000000B Parent=0x00000018 SizeRef=512,1371 Split=Y
+    DockNode            ID=0x0000000B Parent=0x00000018 SizeRef=284,1371 Split=Y
       DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
       DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
         DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,369 Split=Y Selected=0xD256522E
-          DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=268,447 Selected=0xD256522E
-          DockNode      ID=0x00000014 Parent=0x0000000A SizeRef=268,444 Selected=0xE192E354
+          DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=268,393 Selected=0xD256522E
+          DockNode      ID=0x00000014 Parent=0x0000000A SizeRef=268,498 Selected=0xE192E354
         DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,522 Split=Y Selected=0xE192E354
           DockNode      ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
           DockNode      ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Selected=0xE192E354
