lots of layout editor work and refactoring - settled on layout editor api design (chose imgui-like, immediate mode design) - working towards removing Virt2D, replacing with a more robust abstraction - refactoring, enhancing the Scene/Stage abstraction

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=984,485
+Pos=730,485
 Size=631,264
 Collapsed=0
 
@@ -51,7 +51,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
-Pos=651,120
+Pos=655,196
 Size=673,848
 Collapsed=0
 
@@ -62,14 +62,14 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stage]
-Pos=1636,0
-Size=284,185
+Pos=1539,0
+Size=381,185
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Graphics]
-Pos=1636,187
-Size=284,393
+Pos=1539,187
+Size=381,393
 Collapsed=0
 DockId=0x00000013,0
 
@@ -90,8 +90,8 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=1636,582
-Size=284,498
+Pos=1539,582
+Size=381,498
 Collapsed=0
 DockId=0x00000014,0
 
@@ -101,8 +101,8 @@ Size=311,118
 Collapsed=0
 
 [Window][Stacked 1]
-Pos=755,454
-Size=409,172
+Pos=730,454
+Size=434,285
 Collapsed=0
 
 [Window][selected_box]
@@ -138,24 +138,23 @@ Size=247,271
 Collapsed=0
 
 [Window][###box_hierarchy]
-Pos=0,639
-Size=840,305
-Collapsed=0
-DockId=0x00000016,0
-
-[Window][###selected_box]
-Size=840,637
+Pos=0,0
+Size=381,1080
 Collapsed=0
 DockId=0x00000015,0
 
+[Window][###selected_box]
+Size=406,517
+Collapsed=0
+DockId=0x00000016,0
+
 [Window][Dear ImGui Style Editor]
-Pos=255,44
+Pos=283,65
 Size=377,902
 Collapsed=0
 
 [Window][###box_files]
-Pos=0,946
-Size=840,152
+Size=504,1080
 Collapsed=0
 DockId=0x0000001E,0
 
@@ -170,16 +169,30 @@ Size=520,600
 Collapsed=0
 
 [Window][###yaml_hierarchy]
-Pos=370,1100
-Size=470,271
+Pos=278,0
+Size=226,1080
 Collapsed=0
 DockId=0x0000001D,0
 
 [Window][###cpp_hierarchy]
-Pos=0,1100
-Size=368,271
+Size=276,1080
 Collapsed=0
 DockId=0x0000001C,0
+
+[Window][Box Editor]
+Pos=643,948
+Size=406,773
+Collapsed=0
+
+[Window][selected_box_popup]
+Pos=1126,493
+Size=349,482
+Collapsed=0
+
+[Window][popup_save_layout]
+Pos=873,484
+Size=186,114
+Collapsed=0
 
 [Table][0x31804F77,2]
 RefScale=13
@@ -285,36 +298,54 @@ RefScale=13
 Column 0  Weight=0.3780
 Column 1  Width=107
 
+[Table][0x2A112C72,2]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=100
+
+[Table][0x5AF6C5F2,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x9D5FBA21,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x2C9EE95E,2]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=96
+
 [Docking][Data]
-DockSpace               ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
-  DockNode              ID=0x00000017 Parent=0x763BCB4D SizeRef=840,1080 Split=Y Selected=0x881B4C42
-    DockNode            ID=0x00000019 Parent=0x00000017 SizeRef=356,743 Split=Y Selected=0x881B4C42
-      DockNode          ID=0x00000015 Parent=0x00000019 SizeRef=385,637 Selected=0x881B4C42
-      DockNode          ID=0x00000016 Parent=0x00000019 SizeRef=385,305 Selected=0xB54AE55D
-    DockNode            ID=0x0000001A Parent=0x00000017 SizeRef=356,335 Split=Y Selected=0x2064C6BC
-      DockNode          ID=0x0000001E Parent=0x0000001A SizeRef=500,120 Selected=0x2064C6BC
-      DockNode          ID=0x0000001B Parent=0x0000001A SizeRef=500,213 Split=X
-        DockNode        ID=0x0000001C Parent=0x0000001B SizeRef=368,456 Selected=0x95A8BB3D
-        DockNode        ID=0x0000001D Parent=0x0000001B SizeRef=470,456 Selected=0x8BC2715C
-  DockNode              ID=0x00000018 Parent=0x763BCB4D SizeRef=1648,1080 Split=X
-    DockNode            ID=0x00000010 Parent=0x00000018 SizeRef=1634,1371 Split=X
-      DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
-        DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
-        DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
-          DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
-            DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
-            DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
-              DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
-              DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
-          DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
-      DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
-    DockNode            ID=0x0000000B Parent=0x00000018 SizeRef=284,1371 Split=Y
-      DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
-      DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
-        DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,369 Split=Y Selected=0xD256522E
-          DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=268,393 Selected=0xD256522E
-          DockNode      ID=0x00000014 Parent=0x0000000A SizeRef=268,498 Selected=0xE192E354
-        DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,522 Split=Y Selected=0xE192E354
-          DockNode      ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
-          DockNode      ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Selected=0xE192E354
+DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=1920,1080 Split=X
+  DockNode                  ID=0x00000015 Parent=0x763BCB4D SizeRef=381,1080 Selected=0xB54AE55D
+  DockNode                  ID=0x00000019 Parent=0x763BCB4D SizeRef=1537,1080 Split=X
+    DockNode                ID=0x00000016 Parent=0x00000019 SizeRef=382,1080 Selected=0x881B4C42
+    DockNode                ID=0x0000001A Parent=0x00000019 SizeRef=1536,1080 Split=X
+      DockNode              ID=0x00000017 Parent=0x0000001A SizeRef=504,1080 Split=Y Selected=0x881B4C42
+        DockNode            ID=0x0000001E Parent=0x00000017 SizeRef=500,120 Selected=0x2064C6BC
+        DockNode            ID=0x0000001B Parent=0x00000017 SizeRef=500,213 Split=X
+          DockNode          ID=0x0000001C Parent=0x0000001B SizeRef=276,456 Selected=0x95A8BB3D
+          DockNode          ID=0x0000001D Parent=0x0000001B SizeRef=226,456 Selected=0x8BC2715C
+      DockNode              ID=0x00000018 Parent=0x0000001A SizeRef=1414,1080 Split=X
+        DockNode            ID=0x00000010 Parent=0x00000018 SizeRef=1154,1371 Split=X
+          DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
+            DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
+            DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
+              DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=314,486 Split=Y Selected=0x9F6D3660
+                DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=453,496 Selected=0x9F6D3660
+                DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=453,582 Split=Y Selected=0xCBF28E47
+                  DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=349,208 Selected=0xCBF28E47
+                  DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
+              DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
+          DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
+        DockNode            ID=0x0000000B Parent=0x00000018 SizeRef=381,1371 Split=Y
+          DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
+          DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
+            DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,369 Split=Y Selected=0xD256522E
+              DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=268,393 Selected=0xD256522E
+              DockNode      ID=0x00000014 Parent=0x0000000A SizeRef=268,498 Selected=0xE192E354
+            DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,522 Split=Y Selected=0xE192E354
+              DockNode      ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
+              DockNode      ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Selected=0xE192E354
 
