--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=864,852
+Pos=1318,324
 Size=631,264
 Collapsed=0
 
@@ -14,8 +14,8 @@ Size=1280,720
 Collapsed=0
 
 [Window][DockSpaceViewport_286331153]
-Pos=0,0
-Size=2488,1366
+Pos=0,22
+Size=1920,1058
 Collapsed=0
 
 [Window][CatmullRomDemo]
@@ -51,7 +51,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
-Pos=655,196
+Pos=896,248
 Size=673,848
 Collapsed=0
 
@@ -62,16 +62,15 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stage]
-Pos=2194,0
-Size=294,234
+Pos=1083,675
+Size=475,181
 Collapsed=0
-DockId=0x0000000C,0
 
 [Window][Graphics]
-Pos=2194,236
-Size=294,498
+Pos=1535,22
+Size=385,1058
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x0000000A,0
 
 [Window][Game]
 Pos=1442,450
@@ -90,10 +89,10 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=2194,736
-Size=294,630
+Pos=0,683
+Size=428,397
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x0000000D,0
 
 [Window][Delete?]
 Pos=804,481
@@ -138,10 +137,10 @@ Size=247,271
 Collapsed=0
 
 [Window][###box_hierarchy]
-Pos=0,0
-Size=351,1366
+Pos=0,22
+Size=428,659
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x0000000C,0
 
 [Window][###selected_box]
 Size=406,517
@@ -149,8 +148,8 @@ Collapsed=0
 DockId=0x00000016,0
 
 [Window][Dear ImGui Style Editor]
-Pos=283,65
-Size=377,902
+Pos=500,149
+Size=715,902
 Collapsed=0
 
 [Window][###box_files]
@@ -185,8 +184,8 @@ Size=406,773
 Collapsed=0
 
 [Window][selected_box_popup]
-Pos=1802,837
-Size=434,412
+Pos=1360,462
+Size=415,538
 Collapsed=0
 
 [Window][popup_save_layout]
@@ -317,9 +316,11 @@ Column 0  Weight=1.0000
 Column 1  Width=74
 
 [Docking][Data]
-DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=2488,1366 Split=X
-  DockNode                  ID=0x00000015 Parent=0x763BCB4D SizeRef=351,1080 Selected=0xB54AE55D
-  DockNode                  ID=0x00000019 Parent=0x763BCB4D SizeRef=1567,1080 Split=X
+DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,22 Size=1920,1058 Split=X
+  DockNode                  ID=0x00000015 Parent=0x763BCB4D SizeRef=428,1080 Split=Y Selected=0xB54AE55D
+    DockNode                ID=0x0000000C Parent=0x00000015 SizeRef=428,659 Selected=0xB54AE55D
+    DockNode                ID=0x0000000D Parent=0x00000015 SizeRef=428,397 Selected=0xE192E354
+  DockNode                  ID=0x00000019 Parent=0x763BCB4D SizeRef=1490,1080 Split=X
     DockNode                ID=0x00000016 Parent=0x00000019 SizeRef=382,1080 Selected=0x881B4C42
     DockNode                ID=0x0000001A Parent=0x00000019 SizeRef=1536,1080 Split=X
       DockNode              ID=0x00000017 Parent=0x0000001A SizeRef=504,1080 Split=Y Selected=0x881B4C42
@@ -328,7 +329,7 @@ DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=2488,13
           DockNode          ID=0x0000001C Parent=0x0000001B SizeRef=276,456 Selected=0x95A8BB3D
           DockNode          ID=0x0000001D Parent=0x0000001B SizeRef=226,456 Selected=0x8BC2715C
       DockNode              ID=0x00000018 Parent=0x0000001A SizeRef=1414,1080 Split=X
-        DockNode            ID=0x00000010 Parent=0x00000018 SizeRef=1271,1371 Split=X
+        DockNode            ID=0x00000010 Parent=0x00000018 SizeRef=1533,1371 Split=X
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=1635,1080 Split=X
             DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=2150,1371 CentralNode=1 Selected=0xE335455C
             DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=338,1371 Split=Y Selected=0x9F6D3660
@@ -339,13 +340,9 @@ DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,0 Size=2488,13
                   DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=349,372 Selected=0x1467F760
               DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=314,592 Selected=0x86479ED9
           DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=283,1080 Selected=0x44ACAEBD
-        DockNode            ID=0x0000000B Parent=0x00000018 SizeRef=294,1371 Split=Y
-          DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=316,185 Selected=0x44ACAEBD
-          DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=316,893 Split=Y Selected=0xD256522E
-            DockNode        ID=0x0000000A Parent=0x0000000D SizeRef=316,369 Split=Y Selected=0xD256522E
-              DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=268,393 Selected=0xD256522E
-              DockNode      ID=0x00000014 Parent=0x0000000A SizeRef=268,498 Selected=0xE192E354
-            DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=316,522 Split=Y Selected=0xE192E354
-              DockNode      ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
-              DockNode      ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Selected=0xE192E354
+        DockNode            ID=0x0000000B Parent=0x00000018 SizeRef=385,1371 Split=Y
+          DockNode          ID=0x0000000A Parent=0x0000000B SizeRef=316,369 Selected=0xD256522E
+          DockNode          ID=0x0000000F Parent=0x0000000B SizeRef=316,522 Split=Y Selected=0xE192E354
+            DockNode        ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
+            DockNode        ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Selected=0xE192E354
 
