--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=1318,324
+Pos=1086,425
 Size=631,264
 Collapsed=0
 
@@ -51,7 +51,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
-Pos=896,248
+Pos=868,140
 Size=673,848
 Collapsed=0
 
@@ -89,14 +89,14 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=0,683
-Size=428,397
+Pos=0,763
+Size=560,317
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Delete?]
-Pos=804,481
-Size=311,118
+Pos=782,472
+Size=356,136
 Collapsed=0
 
 [Window][Stacked 1]
@@ -138,7 +138,7 @@ Collapsed=0
 
 [Window][###box_hierarchy]
 Pos=0,22
-Size=428,659
+Size=560,739
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -184,13 +184,71 @@ Size=406,773
 Collapsed=0
 
 [Window][selected_box_popup]
-Pos=1360,462
-Size=415,538
+Pos=1454,423
+Size=375,518
 Collapsed=0
 
 [Window][popup_save_layout]
 Pos=873,484
 Size=186,114
+Collapsed=0
+
+[Window][###selected_box_popup]
+Pos=1449,319
+Size=374,538
+Collapsed=0
+
+[Window][###code_window]
+Pos=529,322
+Size=318,257
+Collapsed=0
+
+[Window][popup_copy_code]
+Pos=854,303
+Size=596,570
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=60,60
+Size=793,338
+Collapsed=0
+
+[Window][Lettuce]
+Pos=220,198
+Size=604,828
+Collapsed=0
+DockId=0xA086D808,0
+
+[Window][Eggplant]
+Pos=220,198
+Size=604,828
+Collapsed=0
+DockId=0xA086D808,1
+
+[Window][Carrot]
+Pos=220,198
+Size=604,828
+Collapsed=0
+DockId=0xA086D808,2
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Log]
+Pos=373,245
+Size=500,400
+Collapsed=0
+
+[Window][Example: Console]
+Pos=193,107
+Size=680,747
 Collapsed=0
 
 [Table][0x31804F77,2]
@@ -293,9 +351,9 @@ Column 1  Weight=1.1470
 Column 2  Weight=0.8061
 
 [Table][0xD3CB32B0,2]
-RefScale=13
+RefScale=16
 Column 0  Weight=0.3780
-Column 1  Width=107
+Column 1  Width=96
 
 [Table][0x2A112C72,2]
 RefScale=13
@@ -315,12 +373,25 @@ RefScale=13
 Column 0  Weight=1.0000
 Column 1  Width=74
 
+[Table][0x711369FC,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xB8224DBD,2]
+RefScale=16
+Column 0  Width=65
+Column 1  Width=25
+
 [Docking][Data]
 DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,22 Size=1920,1058 Split=X
-  DockNode                  ID=0x00000015 Parent=0x763BCB4D SizeRef=428,1080 Split=Y Selected=0xB54AE55D
-    DockNode                ID=0x0000000C Parent=0x00000015 SizeRef=428,659 Selected=0xB54AE55D
-    DockNode                ID=0x0000000D Parent=0x00000015 SizeRef=428,397 Selected=0xE192E354
-  DockNode                  ID=0x00000019 Parent=0x763BCB4D SizeRef=1490,1080 Split=X
+  DockNode                  ID=0x00000015 Parent=0x763BCB4D SizeRef=560,1080 Split=Y Selected=0xB54AE55D
+    DockNode                ID=0x0000000C Parent=0x00000015 SizeRef=428,739 Selected=0xB54AE55D
+    DockNode                ID=0x0000000D Parent=0x00000015 SizeRef=428,317 Selected=0xE192E354
+  DockNode                  ID=0x00000019 Parent=0x763BCB4D SizeRef=1358,1080 Split=X
     DockNode                ID=0x00000016 Parent=0x00000019 SizeRef=382,1080 Selected=0x881B4C42
     DockNode                ID=0x0000001A Parent=0x00000019 SizeRef=1536,1080 Split=X
       DockNode              ID=0x00000017 Parent=0x0000001A SizeRef=504,1080 Split=Y Selected=0x881B4C42
@@ -345,4 +416,5 @@ DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,22 Size=1920,1
           DockNode          ID=0x0000000F Parent=0x0000000B SizeRef=316,522 Split=Y Selected=0xE192E354
             DockNode        ID=0x00000011 Parent=0x0000000F SizeRef=524,344 Selected=0xF18332E9
             DockNode        ID=0x00000012 Parent=0x0000000F SizeRef=524,215 Selected=0xE192E354
+DockSpace                   ID=0xA086D808 Pos=220,198 Size=604,828 CentralNode=1 Selected=0x15EF3519
 
