--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=1086,425
+Pos=667,521
 Size=631,264
 Collapsed=0
 
@@ -89,8 +89,8 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=0,763
-Size=560,317
+Pos=0,550
+Size=452,530
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -138,7 +138,7 @@ Collapsed=0
 
 [Window][###box_hierarchy]
 Pos=0,22
-Size=560,739
+Size=452,526
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -194,9 +194,9 @@ Size=186,114
 Collapsed=0
 
 [Window][###selected_box_popup]
-Pos=1449,319
-Size=374,538
-Collapsed=0
+Pos=1250,1303
+Size=382,518
+Collapsed=1
 
 [Window][###code_window]
 Pos=529,322
@@ -388,10 +388,10 @@ Column 1  Width=25
 
 [Docking][Data]
 DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,22 Size=1920,1058 Split=X
-  DockNode                  ID=0x00000015 Parent=0x763BCB4D SizeRef=560,1080 Split=Y Selected=0xB54AE55D
-    DockNode                ID=0x0000000C Parent=0x00000015 SizeRef=428,739 Selected=0xB54AE55D
-    DockNode                ID=0x0000000D Parent=0x00000015 SizeRef=428,317 Selected=0xE192E354
-  DockNode                  ID=0x00000019 Parent=0x763BCB4D SizeRef=1358,1080 Split=X
+  DockNode                  ID=0x00000015 Parent=0x763BCB4D SizeRef=452,1080 Split=Y Selected=0xE192E354
+    DockNode                ID=0x0000000C Parent=0x00000015 SizeRef=347,526 Selected=0xB54AE55D
+    DockNode                ID=0x0000000D Parent=0x00000015 SizeRef=347,530 Selected=0xE192E354
+  DockNode                  ID=0x00000019 Parent=0x763BCB4D SizeRef=1466,1080 Split=X
     DockNode                ID=0x00000016 Parent=0x00000019 SizeRef=382,1080 Selected=0x881B4C42
     DockNode                ID=0x0000001A Parent=0x00000019 SizeRef=1536,1080 Split=X
       DockNode              ID=0x00000017 Parent=0x0000001A SizeRef=504,1080 Split=Y Selected=0x881B4C42
