--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=847,551
+Pos=1109,365
 Size=631,264
 Collapsed=0
 
@@ -89,10 +89,10 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=0,758
-Size=416,322
+Pos=0,733
+Size=443,347
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x0000001F,0
 
 [Window][Delete?]
 Pos=782,472
@@ -138,9 +138,9 @@ Collapsed=0
 
 [Window][###box_hierarchy]
 Pos=0,22
-Size=416,734
+Size=428,525
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000D,0
 
 [Window][###selected_box]
 Size=406,517
@@ -194,8 +194,8 @@ Size=186,114
 Collapsed=0
 
 [Window][###selected_box_popup]
-Pos=2076,507
-Size=539,518
+Pos=1426,328
+Size=382,538
 Collapsed=0
 
 [Window][###code_window]
@@ -249,6 +249,44 @@ Collapsed=0
 [Window][Example: Console]
 Pos=193,107
 Size=680,747
+Collapsed=0
+
+[Window][###box_hierarchy_GameBoard]
+Pos=0,22
+Size=443,709
+Collapsed=0
+DockId=0x00000015,0
+
+[Window][###box_hierarchy_CardPicker]
+Pos=0,22
+Size=443,709
+Collapsed=0
+DockId=0x00000015,1
+
+[Window][BoxEditor Global Options]
+Pos=637,473
+Size=607,558
+Collapsed=0
+
+[Window][###selected_box_popup_CardPicker]
+Pos=1253,494
+Size=358,544
+Collapsed=0
+
+[Window][###selected_box_popup_GameBoard]
+Pos=1120,390
+Size=358,604
+Collapsed=0
+
+[Window][###box_hierarchy_card.yaml]
+Pos=0,520
+Size=387,560
+Collapsed=0
+DockId=0x00000020,0
+
+[Window][###selected_box_popup_card.yaml]
+Pos=1487,305
+Size=415,682
 Collapsed=0
 
 [Table][0x31804F77,2]
@@ -386,14 +424,45 @@ RefScale=16
 Column 0  Width=65
 Column 1  Width=25
 
+[Table][0x059E338D,2]
+RefScale=16
+Column 0  Weight=1.0000
+Column 1  Width=65
+
+[Table][0xF517E11A,2]
+RefScale=16
+Column 0  Weight=1.0000
+Column 1  Width=65
+
+[Table][0x1486B029,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x880607F0,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x4259FCA5,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xF7190ADB,2]
+RefScale=16
+Column 0  Weight=1.0000
+Column 1  Width=65
+
 [Docking][Data]
 DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,22 Size=1920,1058 Split=X
-  DockNode                  ID=0x00000015 Parent=0x763BCB4D SizeRef=416,1080 Split=Y Selected=0xE192E354
-    DockNode                ID=0x0000000C Parent=0x00000015 SizeRef=347,734 Selected=0xB54AE55D
-    DockNode                ID=0x0000000D Parent=0x00000015 SizeRef=347,322 Selected=0xE192E354
-  DockNode                  ID=0x00000019 Parent=0x763BCB4D SizeRef=1502,1080 Split=X
-    DockNode                ID=0x00000016 Parent=0x00000019 SizeRef=382,1080 Selected=0x881B4C42
-    DockNode                ID=0x0000001A Parent=0x00000019 SizeRef=1536,1080 Split=X
+  DockNode                  ID=0x0000000C Parent=0x763BCB4D SizeRef=443,1058 Split=Y
+    DockNode                ID=0x0000000D Parent=0x0000000C SizeRef=456,477 Selected=0xB54AE55D
+    DockNode                ID=0x00000013 Parent=0x0000000C SizeRef=456,483 Split=Y Selected=0xE192E354
+      DockNode              ID=0x00000015 Parent=0x00000013 SizeRef=428,709 Selected=0x36E830FD
+      DockNode              ID=0x00000019 Parent=0x00000013 SizeRef=428,347 Split=Y Selected=0xE192E354
+        DockNode            ID=0x0000001F Parent=0x00000019 SizeRef=418,496 Selected=0xE192E354
+        DockNode            ID=0x00000020 Parent=0x00000019 SizeRef=418,560 Selected=0xD3D128AE
+  DockNode                  ID=0x00000014 Parent=0x763BCB4D SizeRef=1475,1058 Split=X
+    DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=382,1080 Selected=0x881B4C42
+    DockNode                ID=0x0000001A Parent=0x00000014 SizeRef=1536,1080 Split=X
       DockNode              ID=0x00000017 Parent=0x0000001A SizeRef=504,1080 Split=Y Selected=0x881B4C42
         DockNode            ID=0x0000001E Parent=0x00000017 SizeRef=500,120 Selected=0x2064C6BC
         DockNode            ID=0x0000001B Parent=0x00000017 SizeRef=500,213 Split=X
