--- a/imgui.ini
+++ b/imgui.ini
@@ -90,7 +90,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,733
-Size=489,347
+Size=487,347
 Collapsed=0
 DockId=0x0000001F,0
 
@@ -253,13 +253,13 @@ Collapsed=0
 
 [Window][###box_hierarchy_GameBoard]
 Pos=0,22
-Size=489,709
+Size=487,709
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][###box_hierarchy_CardPicker]
 Pos=0,22
-Size=489,709
+Size=488,709
 Collapsed=0
 DockId=0x00000015,1
 
@@ -269,13 +269,13 @@ Size=645,484
 Collapsed=0
 
 [Window][###selected_box_popup_CardPicker]
-Pos=1153,444
-Size=382,518
+Pos=1347,385
+Size=401,518
 Collapsed=0
 
 [Window][###selected_box_popup_GameBoard]
-Pos=1395,779
-Size=662,518
+Pos=1555,360
+Size=382,678
 Collapsed=0
 
 [Window][###box_hierarchy_card.yaml]
@@ -468,14 +468,14 @@ Column 1  Width=65
 
 [Docking][Data]
 DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,22 Size=1920,1058 Split=X
-  DockNode                  ID=0x0000000C Parent=0x763BCB4D SizeRef=489,1058 Split=Y
+  DockNode                  ID=0x0000000C Parent=0x763BCB4D SizeRef=487,1058 Split=Y
     DockNode                ID=0x0000000D Parent=0x0000000C SizeRef=456,477 Selected=0xB54AE55D
     DockNode                ID=0x00000013 Parent=0x0000000C SizeRef=456,483 Split=Y Selected=0xE192E354
-      DockNode              ID=0x00000015 Parent=0x00000013 SizeRef=428,709 Selected=0x36E830FD
+      DockNode              ID=0x00000015 Parent=0x00000013 SizeRef=428,709 Selected=0xB0A9E36D
       DockNode              ID=0x00000019 Parent=0x00000013 SizeRef=428,347 Split=Y Selected=0xE192E354
         DockNode            ID=0x0000001F Parent=0x00000019 SizeRef=418,496 Selected=0xE192E354
         DockNode            ID=0x00000020 Parent=0x00000019 SizeRef=418,560 Selected=0xD3D128AE
-  DockNode                  ID=0x00000014 Parent=0x763BCB4D SizeRef=1429,1058 Split=X
+  DockNode                  ID=0x00000014 Parent=0x763BCB4D SizeRef=1431,1058 Split=X
     DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=382,1080 Selected=0x881B4C42
     DockNode                ID=0x0000001A Parent=0x00000014 SizeRef=1536,1080 Split=X
       DockNode              ID=0x00000017 Parent=0x0000001A SizeRef=504,1080 Split=Y Selected=0x881B4C42
